[project]
name = "project-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=0.3.28",
    "langchain-gradientai>=0.1.19",
    "python-dotenv>=1.2.2",
    "responses>=0.26.0",
    "typing-extensions>=4.15.0",
]
